Fix Modal Box text align;

--- a/src/lwc/portalHeader/portalHeader.css
+++ b/src/lwc/portalHeader/portalHeader.css
@@ -305,6 +305,11 @@
   overflow-y: auto;
 }
 
+.modalType {
+  font-weight: 500;
+  text-align: center;
+}
+
 .tooltip {
   position: relative;
   display: inline-block;
